--- a/ETL_Mini_Project__OGaeva_RShariah_DMoretti.ipynb
+++ b/ETL_Mini_Project__OGaeva_RShariah_DMoretti.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "4      False           theater/plays  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "8        cat9    journalism"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
        "23       subcat24              audio"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1109,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1340,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1391,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1581,7 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1596,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -1930,7 +1930,7 @@
        "999        cat9       subcat24  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1947,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1977,7 +1977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2038,7 +2038,7 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2051,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2097,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2125,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2162,7 +2162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2270,7 +2270,7 @@
        "9        5468    Danielle Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2284,7 +2284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2311,49 +2311,326 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (1933325108.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[91], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    contact_df.drop(columns=['name']\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>contact_id</th>\n",
+       "      <th>email</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4661</td>\n",
+       "      <td>cecilia.velasco@rodrigues.fr</td>\n",
+       "      <td>Cecilia</td>\n",
+       "      <td>Velasco</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3765</td>\n",
+       "      <td>mariana.ellis@rossi.org</td>\n",
+       "      <td>Mariana</td>\n",
+       "      <td>Ellis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4187</td>\n",
+       "      <td>sofie.woods@riviere.com</td>\n",
+       "      <td>Sofie</td>\n",
+       "      <td>Woods</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4941</td>\n",
+       "      <td>jeanette.iannotti@yahoo.com</td>\n",
+       "      <td>Jeanette</td>\n",
+       "      <td>Iannotti</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2199</td>\n",
+       "      <td>samuel.sorgatz@gmail.com</td>\n",
+       "      <td>Samuel</td>\n",
+       "      <td>Sorgatz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>3684</td>\n",
+       "      <td>whitney.noack@laboratorios.org</td>\n",
+       "      <td>Whitney</td>\n",
+       "      <td>Noack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>5784</td>\n",
+       "      <td>gelsomina.migliaccio@junk.com</td>\n",
+       "      <td>Gelsomina</td>\n",
+       "      <td>Migliaccio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>1498</td>\n",
+       "      <td>evangelista.pereira@thompson-peterson.biz</td>\n",
+       "      <td>Evangelista</td>\n",
+       "      <td>Pereira</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>6073</td>\n",
+       "      <td>gareth.comolli@tiscali.fr</td>\n",
+       "      <td>Gareth</td>\n",
+       "      <td>Comolli</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>4939</td>\n",
+       "      <td>michelangelo.hess@bouygtel.fr</td>\n",
+       "      <td>Michelangelo</td>\n",
+       "      <td>Hess</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     contact_id                                      email    first_name  \\\n",
+       "0          4661               cecilia.velasco@rodrigues.fr       Cecilia   \n",
+       "1          3765                    mariana.ellis@rossi.org       Mariana   \n",
+       "2          4187                    sofie.woods@riviere.com         Sofie   \n",
+       "3          4941                jeanette.iannotti@yahoo.com      Jeanette   \n",
+       "4          2199                   samuel.sorgatz@gmail.com        Samuel   \n",
+       "..          ...                                        ...           ...   \n",
+       "995        3684             whitney.noack@laboratorios.org       Whitney   \n",
+       "996        5784              gelsomina.migliaccio@junk.com     Gelsomina   \n",
+       "997        1498  evangelista.pereira@thompson-peterson.biz   Evangelista   \n",
+       "998        6073                  gareth.comolli@tiscali.fr        Gareth   \n",
+       "999        4939              michelangelo.hess@bouygtel.fr  Michelangelo   \n",
+       "\n",
+       "      last_name  \n",
+       "0       Velasco  \n",
+       "1         Ellis  \n",
+       "2         Woods  \n",
+       "3      Iannotti  \n",
+       "4       Sorgatz  \n",
+       "..          ...  \n",
+       "995       Noack  \n",
+       "996  Migliaccio  \n",
+       "997     Pereira  \n",
+       "998     Comolli  \n",
+       "999        Hess  \n",
+       "\n",
+       "[1000 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
     "contact_df[['first_name','last_name']]=contact_df['name'].str.split(' ' , expand=True)\n",
     "\n",
+    "\n",
     "# Drop the contact_name column\n",
     "\n",
     "\n",
-    "contact_df.drop(columns=['name'])"
+    "del contact_df['name']\n",
+    "contact_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>contact_id</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4661</td>\n",
+       "      <td>Cecilia</td>\n",
+       "      <td>Velasco</td>\n",
+       "      <td>cecilia.velasco@rodrigues.fr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3765</td>\n",
+       "      <td>Mariana</td>\n",
+       "      <td>Ellis</td>\n",
+       "      <td>mariana.ellis@rossi.org</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4187</td>\n",
+       "      <td>Sofie</td>\n",
+       "      <td>Woods</td>\n",
+       "      <td>sofie.woods@riviere.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4941</td>\n",
+       "      <td>Jeanette</td>\n",
+       "      <td>Iannotti</td>\n",
+       "      <td>jeanette.iannotti@yahoo.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2199</td>\n",
+       "      <td>Samuel</td>\n",
+       "      <td>Sorgatz</td>\n",
+       "      <td>samuel.sorgatz@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5650</td>\n",
+       "      <td>Socorro</td>\n",
+       "      <td>Luna</td>\n",
+       "      <td>socorro.luna@hotmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>5889</td>\n",
+       "      <td>Carolina</td>\n",
+       "      <td>Murray</td>\n",
+       "      <td>carolina.murray@knight.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>4842</td>\n",
+       "      <td>Kayla</td>\n",
+       "      <td>Moon</td>\n",
+       "      <td>kayla.moon@yahoo.de</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>3280</td>\n",
+       "      <td>Ariadna</td>\n",
+       "      <td>Geisel</td>\n",
+       "      <td>ariadna.geisel@rangel.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5468</td>\n",
+       "      <td>Danielle</td>\n",
+       "      <td>Ladeck</td>\n",
+       "      <td>danielle.ladeck@scalfaro.net</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   contact_id first_name last_name                         email\n",
+       "0        4661    Cecilia   Velasco  cecilia.velasco@rodrigues.fr\n",
+       "1        3765    Mariana     Ellis       mariana.ellis@rossi.org\n",
+       "2        4187      Sofie     Woods       sofie.woods@riviere.com\n",
+       "3        4941   Jeanette  Iannotti   jeanette.iannotti@yahoo.com\n",
+       "4        2199     Samuel   Sorgatz      samuel.sorgatz@gmail.com\n",
+       "5        5650    Socorro      Luna      socorro.luna@hotmail.com\n",
+       "6        5889   Carolina    Murray    carolina.murray@knight.com\n",
+       "7        4842      Kayla      Moon           kayla.moon@yahoo.de\n",
+       "8        3280    Ariadna    Geisel     ariadna.geisel@rangel.com\n",
+       "9        5468   Danielle    Ladeck  danielle.ladeck@scalfaro.net"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Reorder the columns\n"
+    "# Reorder the columns\n",
+    "contacts_df_clean = contact_df[['contact_id', 'first_name', 'last_name', 'email']]\n",
+    "contacts_df_clean.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "contact_id     int64\n",
+       "first_name    object\n",
+       "last_name     object\n",
+       "email         object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check the datatypes one more time before exporting as CSV file.\n"
+    "# Check the datatypes one more time before exporting as CSV file.\n",
+    "contacts_df_clean.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
